# readest

apps/readest-app/: AGENTS.md
apps/readest-app/.claude/plans/: vivid-orbiting-thimble.md
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/: Cargo.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/: build.gradle.kts
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/android/src/main/java/: NativeBridgePlugin.kt
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/ios/Sources/: NativeBridgePlugin.swift
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/: default.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/autogenerated/: reference.md
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/autogenerated/commands/: clear_sync_passphrase.toml  get_sync_passphrase.toml  is_sync_keychain_available.toml  set_sync_passphrase.toml
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/permissions/schemas/: schema.json
apps/readest-app/src-tauri/plugins/tauri-plugin-native-bridge/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
apps/readest-app/src/app/: layout.tsx
apps/readest-app/src/components/: AppLockScreen.tsx  BookCover.tsx  PassphrasePrompt.tsx  PinInput.tsx  Providers.tsx  Quota.tsx
apps/readest-app/src/context/: EnvContext.tsx
apps/readest-app/src/hooks/: useBackgroundTexture.ts  useFileSelector.ts  useReplicaPull.ts  useSync.ts
apps/readest.koplugin/: syncannotations.lua
(+179 files in other folders)
